# quicture

./: .gitignore  README.md  docker-compose.yml  log-format.yml
back-end/: Dockerfile  build  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  startup
back-end/utils/gcp/: __init__.py  s3
front-end/: .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
front-end/app/: globals.css  layout.tsx
front-end/app/(root)/: page.tsx
front-end/app/[id]/: page.tsx
front-end/app/api/[id]/: route.tsx
front-end/app/main/: page.tsx
front-end/app/peerex/: page.tsx
front-end/app/room/[id]/: page.tsx
front-end/components/: EmptyPlaceholder.css  Loader.css  UserInfo.js
front-end/components/shared/: MainBody.tsx  RoomBody.tsx
front-end/components/ui/: button.tsx  checkbox.tsx  input.tsx  parallax-scroll.tsx  slide-motion-div.tsx  toast.tsx
front-end/utils/: crypto.ts
peer-to-peer/: Dockerfile  index.js  index.ts  package-lock.json  package.json  tsconfig.json
peerexample/: helpers.js  index.js  package-lock.json  package.json
