[tool.poetry]
name = "quickshare"
version = "0.1.0"
description = "A privacy centered p2p photo sharing platform with an added storage functionality"
authors = ["Jason Cameron <git@jasoncameron.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
